<resources>
    <string name="app_name">activity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Página Institucional</string>
    <string name="menu_gallery">Buscar Páginas</string>
    <string name="menu_slideshow">Mensajes</string>
    <string name="placeholder_url_insert">Inserte una Url</string>

    <string name="form_agenda">Agenda UMB</string>
    <string name="form_agenda_date">Fecha</string>
    <string name="form_agenda_subject">Asunto</string>
    <string name="form_agenda_activity">Actividad</string>
    <string name="word_insert">Introduzca</string>
    <string name="word_saved">Guardar</string>
    <string name="word_schedule">Agendas</string>

</resources>